<resources>
    <string name="app_name">DanceTracker</string>
    <string name="addBattle">Add a battle</string>
    <string name="addBattleTitle">Add a new battle</string>
    <string name="technique">Technique</string>
    <string name="artistique">Artistique</string>
    <string name="espace">Occupation de l\'espace</string>
    <string name="style">Différents styles</string>
    <string name="originalité">Originalité</string>
    <string name="total">Total</string>
    <string name="myTeam">My Team</string>
    <string name="theOtherTeam">The Other Team</string>
    <string name="round">Number of rounds</string>
    <string name="matchTitle">Match</string>
    <string name="winner">Winner</string>

    <!-- Sarah Fong-->
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_geolocalisation">Map</string>
    <string name="prendre_photo">Prendre Photo</string>
    <string name="ouvrir_photo_gallery">Ouvrir Photo Gallery</string>
    <string name="suivant">Suivant</string>
    <string name="sauvegarder_battle">Sauvegarder Battle</string>
    <string name="teams">Teams</string>
    <string name="team1">Team1</string>
    <string name="error">error</string>
    <string name="battle">Battle</string>
    <string name="add">Add</string>
    <string name="history">History</string>
    <string name="camera">Camera</string>
    <string name="stats">Stats</string>
    <string name="historique_des_battles_enregistr_es_sur_la_bdd_externe">Historique des battles enregistrées sur la bdd Externe :</string>

</resources>
