<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/grey"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="Sarah vs Sara"/>


                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/winner" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/theOtherTeam" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="13 - 11" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Localisation"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="#FFFFFF"
                    android:background="@color/pink"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="Round 1"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="Teams"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/technique"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/artistique"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/espace"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/style"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/originalité"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/total"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="Sarah"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="Sara"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>